# pbm_raspberry

./: .gitignore  CMakeLists.txt  Makefile  PhaseBasedMotionMagnification  README.md  benchmark_main.cc  calculate_process.cc  calculate_process.h  cmake_install.cmake  complex_steerable_pyramid.cc  complex_steerable_pyramid.h  firwin_manager.cc  firwin_manager.h  logging_manager.cc  logging_manager.h  main.cc  opencv_viewer.cpp  parameters.h  storage_manager.cc  storage_manager.h  streaming_manager.cc  streaming_manager.h
input/: videoCrop.py  videoShrink.py
pocketfft/: pocketfft_hdronly.h
